refactor: 할인 내역, 증정 내역 Getter 제거 및 DTO 변환로직으로 대체